sandbox/otel-demo-thegame/odtg-app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odtg
  namespace: odtg
spec:
  selector:
    app: odtg
  ports:
    - port: 80
      targetPort: 3000
